--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <option value="all">ALL TASKS</option>
           <option value="completed">COMPLETED ONLY</option>
           <option value="incomplete">INCOMPLETE ONLY</option>
+          <!-- <option value="deleted">RECENTLY DELETED</option> -->
         </select>
       </div>
     </header>
